# scaler-hackathon-rl-medical-triage-env

./: .dockerignore  .env.example  .gitignore  .hfignore  CLAUDE.md  Dockerfile  README.md  client.py  grpo_train.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setupCredentials.py  train.py
artifacts/gates/: final_submission_check_summary.json  full_release_gate_summary.json  pre_submit_check_summary.json
assets/: github-demo.webm
datasets/: README.md  medical_triage_triples.jsonl
docs/: BASELINE_MATRIX.md  EDUCATIONAL_DEEP_DIVE.md  EDUCATIONAL_DEEP_DIVE_LOCAL.md  EVALUATOR_BRIEF.md  EVIDENCE_SUMMARY.md  FAIRNESS_ANALYSIS.md  LEADERBOARD.md  LOW_LEVEL_DESIGN.md  PROJECT_DOCUMENTATION.md  SLIDE_DECK.md  TECHNICAL_REPORT.md  TEST_REPORT.md  TODO.md  TRAINING_RESULTS.md  openenv_hackathon_criteria.md  training_results.csv
notebooks/: grpo_colab.ipynb
outputs/: .gitkeep
scripts/: browser_ui_smoke.py  capture_github_demo.py  check_coverage.py  export_hf_dataset.py  final_submission_check.sh  full_browser_test.py  full_release_gate.sh  live_verify.sh  pre_submit_check.sh  random_agent_baseline.py  run_full_browser_with_retry.sh  run_leaderboard.py  validate-submission.sh
server/: app.py  cases.py  graders.py  medical_triage_environment.py  requirements.txt
tests/: test_api_contract.py  test_app_coverage.py  test_client_scripts.py  test_environment.py  test_graders.py  test_inference_contract.py  test_ui_contract.py  test_v2_enhancements.py
training_artifacts/: metrics_20260414-184320.json  task_summary_20260414-184320.csv
