[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medical-triage-env"
version = "2.3.0"
description = "OpenEnv RL environment for clinical triage. NHS NEWS2 graders, demographic fairness testing, multi-turn deterioration detection. Research-grounded (Nature Medicine 2025, Oxford 2026, MIMIC-III)."
authors = [{name = "Team Falcons", email = "team@falcons.ai"}]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["openenv", "reinforcement-learning", "medical", "triage", "healthcare", "fairness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "openai>=2.7.2",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "openenv>=0.2.0; python_version < '0'",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/kunalkachru23/medical-triage-env"
Repository = "https://github.com/kunalkachru/scaler-hackathon-rl-medical-triage-env"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]


[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
markers = [
    "static: tests that parse source files with no server required (fast, CI-safe)",
    "live: tests that require a local server running on :8000",
]
